<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:theme="@style/AppTheme">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="16dp"
        android:paddingLeft="24dp"
        android:paddingRight="24dp">



        <!--  title Label -->
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp">
            <EditText android:id="@+id/Title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textCapWords"
                android:hint="@string/Title"
                />
        </android.support.design.widget.TextInputLayout>

        <!-- step Label -->
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp">
            <EditText android:id="@+id/Step"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:hint="@string/Step"
              />
        </android.support.design.widget.TextInputLayout>

        <!-- Password Label -->
       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:orientation="horizontal"
           >

        <!-- Signup Button -->
        <android.support.v7.widget.AppCompatButton
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/Add"
            android:contentDescription="@string/Add"
            android:textColor="@color/white"
            android:layout_gravity="end"
            android:background="@color/colorPrimaryDark"
            android:id="@+id/Addbut"/>
        <android.support.v7.widget.AppCompatButton
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/Clear_all"
            android:contentDescription="@string/Clear_all"
            android:textColor="@color/white"
            android:layout_gravity="end"
            android:background="@color/colorPrimaryDark"
            android:id="@+id/Clearbut"
            />

       </LinearLayout>
        <TextView
            android:layout_marginTop="13dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:text="@string/History"
            android:gravity="center"
            android:textSize="20sp"
            android:textStyle="bold"
            />

        <ListView
            android:id="@+id/noteList"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >

        </ListView>

    </LinearLayout>
</LinearLayout>